fix: chat improvements

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -23,6 +23,11 @@ html, body {
 	height: 100%;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
 .media-buffering-container {
 	position: absolute;
 	top: 0;
